Fixed contact me horizontal overflow

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -10,6 +10,7 @@ header {
 
 .contact-banner {
     display: grid;
+    overflow-x: hidden;
 
     background-image: url(../../assets/images/header-banner-footer.svg);
     background-repeat: no-repeat;
